# bmtm-url_shortener_service

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.monitoring.yml  docker-compose.yml  generate_pdfs.py  pdf_output.txt  pyproject.toml  requirements.txt  sartname.docx
.github/workflows/: ci.yml
docs/: BMTM_Proje_Raporu.md  architecture.md  final-report.md  slides.md  work-distribution.md
helm/url-shortener/: Chart.yaml  values.yaml
helm/url-shortener/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/: argocd-application.yaml  configmap.yaml  deployment.yaml  keda-scaledobject.yaml  service.yaml
monitoring/: prometheus.yml
monitoring/grafana/: grafana-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
perf/: load-test.js  report.md
postman/: collection.json
src/: __init__.py  aws_client.py  config.py  crud.py  database.py  main.py  metrics.py  models.py  schemas.py  shortener.py  tracing.py
src/static/: index.html
tests/: conftest.py  factories.py
tests/e2e/: __init__.py  test_ui.py
tests/integration/: __init__.py  test_api.py  test_database.py
tests/unit/: __init__.py  test_aws.py  test_crud.py  test_shortener.py
