[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "url-shortener-service"
version = "1.0.0"
description = "URL kısaltma mikroservisi — Bulut Mimarilerinde Test Mühendisliği Dönem Projesi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "boto3==1.35.88",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "factory-boy==3.3.1",
    "faker==33.3.1",
    "testcontainers==4.9.1",
]

[tool.pytest.ini_options]
# pytest ayarları
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Coverage ayarları
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
    "--tb=short",
    "-v"
]


# Test sırasında görmezden gelinecek uyarılar
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "W503", "E402"]
exclude = ["__pycache__", "*.pyc", ".git", "htmlcov"]
